tests/expectations/compiler/mappings/no_import_external_read_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `users`
    --> compiler-test:8:35
     |
   8 |         let a:bool = Mapping::get(registry.aleo/users, addr);
     |                                   ^^^^^^^^^^^^^^^^^^^
"""]
